tests/cases/fail_missing_strictness_docs.rs
use strict_typing::strict_types;

#[strict_types(allow(bool))]
struct Bad {
    enabled: bool,
}

fn main() {}
